<resources>
    <string name="app_name">Mixed</string>
    <string name="instructions">
        <![CDATA[
        <p>The game consists in writing three sets of cards, each set containing 3 cards.</p>

        <p>Each card has it’s unique purpose:<br>
        First card: Write an ACTION<br>
        e.g 1: “I was scratching my dog’s belly”<br>
        e.g 2: “I was writing a love letter”</p>

        <p>Second card: Write a PLACE<br>
        e.g 1: “On top of a car”<br>
        e.g 2: “Next to my fiance”</p>

        <p>Third card: Write a CONTINUATION OF ACTION<br>
        e.g 1: “And then I threw up”<br>
        e.g 2: “And then I walked away like nothing happened”</p>

        <p>The cards should not be related to each other. Write whatever you want using your creativity.</p>
        <p>After all player finished writing, all the cards will be mixed.</p>

        <p>At the end, each player will randomly draw one card from each category (action, place and continuation of action) and will read the result out loud so everyone to hear the combination result.</p>
        ]]>

    </string>
    <string name="or">OR</string>
    <string name="pin">PIN</string>
    <string name="insert_pin">Insert PIN</string>
    <string name="create_room">+ Create room</string>
    <string name="instructions_btn">Instructions</string>
    <string name="logo">Logo</string>
    <string name="play_btn">playbtn</string>
    <string name="room_name">Room name</string>
    <string name="room_nameinsert">room name</string>
    <string name="next_btn">Next</string>
    <string name="nr_groups_cards">Number of groups of cards</string>
    <string name="nr_cards">1</string>
    <string name="player_name">Player name</string>
    <string name="player_name_hint">player name</string>
    <string name="txt_pin">PIN: </string>
    <string name="txt_waitingForPlayers">Waiting for players: </string>
    <string name="txt_action">Action</string>
    <string name="action_hint">Write an action here...</string>
    <string name="txt_place">Place</string>
    <string name="txt_continuation_of_action">Continuation of action</string>

</resources>